# npm-rs

./: Cargo.toml  README.md  package.json
src/: main.rs  package.rs
src/cmd/: args.rs  init.rs  install.rs  mod.rs  remove.rs
src/core/: manifest.rs  mod.rs  registry.rs  resolve.rs
