[package]
name = "npm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1.23.1", features = ["full"] }
futures = "0.3.25"
# CLI framework
clap = { version = "4.0.32", features = ["derive"] }
# HTTP requests
reqwest = "0.11.13"
# Error handling
anyhow = "1.0.68"
thiserror = "1.0.38"
# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# semver parsing
node-semver = "2.1.0"
